--- a/Dissertation/2related_work.tex
+++ b/Dissertation/2related_work.tex
@@ -7,7 +7,7 @@ When users are considering adopting new IoT devices, they want to take the benef
 \section{IoT Technology}
 The term ``Internet of Things" (IoT) was first introduced by Kevin Ashton in the context of supply chain management in 1999~\cite{ashton2009internet}. Atozri et al. define IoT as a pervasive presence around us of a variety of things or objects - such as Radio-Frequency IDentification (RFID) tags, sensors, actuators, mobile phones, etc. -- which, through a unique addressing scheme, are able to interact with each other and cooperate with their neighbors to reach common goals~\cite{atzori2010internet}. As various wireless sensor technologies (e.g. RFID, embedded sensors, and actuator nodes) and artificial intelligence have advanced rapidly during the last two decades, the definition of IoT has evolved to more broadly covering a wide range of monitoring and control applications based on a network of sensing and actuating devices that are controlled remotely through the Internet in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
 
-IoT can benefit both organizations and individual consumers in all above-mentioned domains by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}. With such huge social and economic potential, IoT is estimated to grow rapidly by a wide range of well-respected organizations. For example, Gartner~\cite{eddy2015gartner} has predicted over 21 billion IoT devices will be in use by 2020; IoT product and service suppliers will generate incremental revenue exceeding \$300 billion. IDC forecasts a global market for IoT will grow from \$1.9 trillion in 2013 to \$7.1 trillion in 2020. However, there exist several key security and privacy concerns associated with the rise of the IoT, including data processing and storage, privacy and security breaches\cite{weinberg2015internet, lu2014overview, yu2015handling}.
+IoT can benefit both organizations and individual consumers in all above-mentioned domains by enhancing data collection, enabling real-time response, improving access and control of internet-connected devices, increasing efficiency, productivity, and satisfaction~\cite{weinberg2015internet, porter2014smart}. With such huge social and economic potential, IoT is estimated to grow rapidly by a wide range of well-respected organizations. However, there exist several key security and privacy concerns associated with the rise of the IoT, including data processing and storage, privacy and security breaches\cite{weinberg2015internet, lu2014overview, yu2015handling}.
 
 Previous studies mostly focused on the technical issues of IoT technologies~\cite{fantana2013iot, lazarescu2013design, shang2012internet}. For example, Uckelmann et al. systematically explained the architecture of future IoT~\cite{uckelmann2011architectural}. Chen et al. present a vision of IoT's applications in China~\cite{chen2014vision}. Guinard et al. described the IoT’s best practices based on the web technologies and proposed several prototypes using the web principles, which connect environmental sensor nodes, energy monitoring systems, and RFID-tagged objects to the web~\cite{guinard2011internet}. However, little attention has been devoted to, from the perspective of individual consumers, understanding how the user of IoT will trade off the above mentioned benefits and privacy concerns of IoT technology when they consider adopting it~\cite{al2016modeling, gao2014unified, mital2018adoption}.
 
@@ -64,10 +64,10 @@ As shown in Figure~\ref{fig:trustchain}, Trust Chain is established mostly becau
 Knowing all these factors that affect users' decision on adopting IoT device will help us develop the scales for evaluating our designed privacy-setting interfaces in our proposed work (Chapter~\ref{chapter:evaluation}). Based on the insights gained from this study, we encourage the designers of IoT privacy-setting interfaces to face the difficult challenge of maximizing the usability and the privacy control of the user interface while minimizing the privacy threats to the users, making IoT more acceptable.
 
 \section{Summary}
-In this chapter, I have noted the following points: 1) IoT have grown in use rapidly with the advancing of RFID and other wireless sensor technologies. 2) IoT have brought convenience and enjoyment to our daily lives. 3) Privacy concern is an important factor that affect users' decisions when adopting IoT. 4) The acceptance of IoT is still not systematically examined.
+In this chapter, I have noted the following points: 1) IoT have grown in use rapidly with the advancing of RFID and other wireless sensor technologies. 2) IoT have brought convenience and enjoyment to our daily lives. 3) Privacy concern is an important factor that affects users' decisions when adopting IoT. 4) The acceptance of IoT is still not systematically examined.
 
 
-In the next chapter, we discuss the reason that cause the privacy issues in IoT, how effective existing privacy control schemes are, and the work that aims to help users protect their privacy more effectively.
+In the next chapter, we discuss the reason that causes the privacy issues in IoT, how effective existing privacy control schemes are, and the work that aims to help users protect their privacy more effectively.
 
 
 
@@ -91,18 +91,18 @@ In the next chapter, we discuss the reason that cause the privacy issues in IoT,
 In chapter~\ref{chapter:Relatedwork1}, we discuss the development of IoT and its acceptance model. As IoT systems gain popularity and bring privacy issues at the same time, it is urgent to study the cause of these privacy issues. By doing this, we can improve our design of IoT applications to protect IoT users' privacy, and make IoT more acceptable.
 
 \section{Privacy Preference}
-Researchers have attempted to examine users' privacy preferences in different areas, such as Social Networks and mobile applications. Research has shown people differ extensively in their privacy settings~\cite{olson2005study}, but can be clustered into groups~\cite{anthony2007privacy,knijnenburg2013dimensionality}. In~\cite{wisniewski2014profiling, knijnenburg2017privacy}, Facebook users are found to belong to one of 6 types of privacy profiles which range from Privacy Maximizers to Minimalists. In the health/fitness domain, emerging sensors and mobile applications allow people to easily capture fine-grained personal data related to long term fitness goals. Brar and Kay discover that users' preferences change for every fitness/heath index. Weight was found the be the most important index~\cite{brar2004privacy}. 
+Researchers have attempted to examine users' privacy preferences in different areas, such as Social Networks and mobile applications. Research has shown people differ extensively in their privacy settings~\cite{olson2005study}, but can be clustered into groups~\cite{anthony2007privacy,knijnenburg2013dimensionality}. In~\cite{wisniewski2014profiling, knijnenburg2017privacy}, Facebook users are found to belong to one of 6 types of privacy profiles which range from Privacy Maximizers to Minimalists. In the health/fitness domain, emerging sensors and mobile applications allow people to easily capture fine-grained personal data related to long term fitness goals. Brar and Kay discover that users' preferences change for every fitness/heath index. Weight was found to be the most sensitive index~\cite{brar2004privacy}. 
 
 At the same time, users are found to have difficulties managing their privacy settings with current privacy-setting schemes. Liu et al. use an online survey (N=200) to investigate the difference between the desired privacy settings and the actual privacy settings of Facebook users. Their results show that 63\% of the privacy settings for photo sharing did not match the users' desired settings. In~\cite{madejski2012study}, Madejski et al. conduct user studies to find the difference between Facebook users’ sharing intentions and their actual privacy settings. Their results show that there is at least one violation in the privacy settings for each of the 65 participants.
 
-The reasons for the failure of existing privacy-setting schemes are diverse. One reason for this is that the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people's information disclosure behaviors vary along multiple dimensions~\cite{knijnenburg2013dimensionality}. People can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy groups and adapt their privacy practices to the disclosure style of this group to satisfy different types of information and users. However, on the other hand, the more privacy policies would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, in this thesis, we will use a data-driven approach (machine learning techniques) to discover suitable smart privacy profiles, which are generated from the results of both statistical analysis and machine learning techniques, for users with different ``disclosure styles".
+The reasons for the failure of existing privacy-setting schemes are diverse. One reason for this is that the increasing number of privacy rules make manual privacy configuration excessively challenging for normal users~\cite{furnell2015managing}. Knijnenburg et al. discover that people's information disclosure behaviors vary along multiple dimensions~\cite{knijnenburg2013dimensionality}. People can be classified along these dimensions into groups with different ``disclosure styles". This result suggests that we could classify users into their respective privacy groups and adapt their privacy practices to the disclosure style of this group to satisfy different types of information and users. However, on the other hand, more privacy policies would lead to more decision-making and more burden for users. Note that in the IoT environment, the number for different IoT devices could be vast, which could potentially make choosing adequate privacy settings a very challenging task that is likely to result in information and choice overload~\cite{williams2016perfect}. Therefore, in this thesis, we will use a data-driven approach (machine learning techniques) to discover suitable smart privacy profiles, which are generated from the results of both statistical analysis and machine learning techniques, for users with different ``disclosure styles".
 
 \section{Privacy in IoT}
 IoT systems are capable of providing a highly personalized services to their users~\cite{vallee2016personalization, etzion2014personalization, hemant2015internet}. Henka et al.~\cite{henka2016personalizing} propose an approach to personalize services in household IoT using the Global Public Inclusive Infrastructure's~\cite{vanderheiden2011creating} preference set to describe an individual's needs and preferences, and then adapting a smart environment accordingly. Russell et al.~\cite{russell2015personalization} use unobtrusive sensors and a micro-controller to realize human detection to provide personalization in a household IoT environment.
 
 Researchers have shown that privacy plays a limiting role in users' adoption of personalized services~\cite{teltzrow_2004}. For example, Awad and Krishnan~\cite{awad_2006} show that privacy concerns inhibit users' use of personalized services, and Sutanto et al.~\cite{sutanto_2013} demonstrated that privacy concerns can prevent people from using a potentially beneficial personalized application. Kobsa et al.~\cite{kobsa_2016} demonstrate that the personalization provider is an important determinant of users' privacy concerns.
 
-Moreover, research has shown  users' willingness to provide personal information to personalized services depends on both the risks and benefits of disclosure~\cite{phelps_2000,ho_2006,hui_2006}, and researchers therefore claim that both the benefits and the risks meet a certain threshold~\cite{treiblmaier_2007}, or that they should be in balance~\cite{chellappa_2005}.
+Moreover, research has shown  users' willingness to provide personal information to personalized services depends on both the risks and benefits of disclosure~\cite{phelps_2000,ho_2006,hui_2006}, and researchers therefore claim that both the benefits and the risks should meet a certain threshold~\cite{treiblmaier_2007}, or that they should be in balance~\cite{chellappa_2005}.
 
 The argument that using user-generated data for personalization can result in privacy concerns has also been made in IoT environments~\cite{worthy_trust_2016, gao2014unified, al2016modeling}. One of the first examples in this regard was the work by Sheng et al.~\cite{sheng_experimental_2008}, who showed that users of ``u-commerce'' services (IoT-driven mobile shopping) felt less inclined to use personalized (rather than non-personalized) u-commerce services, unless the benefits were overwhelming (i.e., providing help in an emergency).
 
@@ -118,7 +118,7 @@ In the AOFU model~\cite{tsai2017turtle}, permissions are only asked during the f
 
 A few privacy management solutions were developed to simplify the task of controlling personal data for smartphone users. For instance, ipShield~\cite{chakraborty2014ipshield} is a context-aware privacy framework for mobile systems that provides users with great control of their data and inference risks. My Data Store \cite{ref:vescovi} offers a set of tools to manage, control and exploit personal data by enhancing an individual’s awareness of the value of their data. Similarly, Databox~\cite{ref:chaudhry} enables individuals to coordinate the collection of their personal data, and make those data available for specific purposes. However, these data managers do not include user privacy profiling and recommendation in the complex IoT environment. Privacy can also be protected by providing different anonymity levels of data that are given to third parties. However, it might not be possible to implement the most effective privacy standards such as data obfuscation due to numerous trade-offs and restrictions, especially in the health care and fitness domain.
 
-In the smartphone domain, privacy nudging is an effective scheme to increase users' awareness~\cite{almuhimedi2015your}. Privacy nudging allows users to be informed about both their privacy settings and how third party applications access their data~\cite{liu2016follow,fu2014field}. In a study by Liu et al., 78.7\%~\cite{liu2016follow} of the nudges were adopted by smartphone users. However, such nudges are problematic for IoT, because IoT devices are supposed to operate in the background. Moreover, as the penetration of IoT devices in our homes continues to increase, nudging would become a constant noise which users would soon start to ignore, like software EULAs~\cite{good2005spyware} or privacy policies~\cite{jensen2004privacy}. In addition, privacy nudges lack the personalization and provide only a general recommendation.
+In the smartphone domain, active privacy nudging is an effective scheme to increase users' awareness~\cite{almuhimedi2015your}. Privacy nudging allows users to be informed about both their privacy settings and how third party applications access their data~\cite{liu2016follow,fu2014field}. In a study by Liu et al., 78.7\%~\cite{liu2016follow} of the nudges were adopted by smartphone users. However, such active nudges are problematic for IoT, because IoT devices are supposed to operate in the background. Moreover, as the penetration of IoT devices in our homes continues to increase, nudging would become a constant noise which users would soon start to ignore, like software EULAs~\cite{good2005spyware} or privacy policies~\cite{jensen2004privacy}. In addition, privacy nudges lack the personalization and provide only a general recommendation.
 
 %Another approach which is more user-centric is the user-tailored privacy~\cite{knijnenburg2017privacy}. It models users’ privacy concerns and provides them with adaptive privacy decision support. This model can be seen as personalized ``smart nudges'' where the recommendation is aligned with the user's privacy preference. User-tailored privacy aids users in making privacy decisions by providing them the right amount of both the privacy-related information associated to them and the useful privacy control that do not overwhelm or mislead them. However, in practice it is hard to implement general privacy model as the idea is too broad and abstract especially in the diversity of privacy perception of users. 
 
@@ -142,9 +142,7 @@ We further extend this approach using \emph{clustering} to find several smart de
 
 Ravichandran et al.~\cite{ravichandran2009capturing} employ an approach similar to ours, using $k$-means clustering on users' contextualized location sharing decisions to come up with several default policies. They showed that a small number of policies could accurately reflect a large part of the location sharing preferences. 
 
-In this proposal, we extend this \emph{clustering} approach to find the best profiles based on various novel clustering approaches, and take the additional step of designing user interfaces that incorporate the best solutions for different IoT contexts.
+In this dissertation, we extend this \emph{clustering} approach to find the best profiles based on various novel clustering approaches, and take the additional step of designing user interfaces that incorporate the best solutions for different IoT contexts.
 
 \section{Summary}
-In this chapter, we have noted following points: 1) Existing research has shown that people are extensively different in their privacy settings, but can be grouped. 2) People are bad at managing privacy settings using currently privacy setting schemes. 3) Privacy prediction can be used by utilizing machine learning algorithms to help design a new privacy-setting interface to simplify the task of managing privacy setting for users. 
-
-In the next chapter, we will present how we design for privacy in the general/public IoT context using a data-driven approach, the contributions and the limitations of our work.
+In this chapter, we have noted following points: 1) Existing research has shown that people are extensively different in their privacy settings, but can be grouped. 2) People are bad at managing privacy settings using currently privacy setting schemes. 3) Privacy prediction can be used by utilizing machine learning algorithms to help design a new privacy-setting interface to simplify the task of managing privacy setting for users. It is possible that we can leverage the user diversity and use the predictive approach to develop privacy-setting interfaces for the users. Thus, in the next chapter, we will present how we design for privacy in the general/public IoT context using a data-driven manner, the contributions and the limitations of our work.
