--- a/Dissertation/abstract.tex
+++ b/Dissertation/abstract.tex
@@ -3,5 +3,5 @@ Privacy concerns have been identified as an important barrier to the growth of I
 
 To solve this problem in the IoT domain, a more fundamental understanding of the logic behind IoT users' privacy decisions in different IoT contexts is needed. We, therefore, conducted a series of studies to contextualize the IoT users' decision-making characteristics and designed a set of privacy-setting interfaces to help them manage their privacy settings in various IoT contexts based on the deeper understanding of users' privacy decision behaviors. 
 
-In this dissertation, we first present three studies on recommending privacy settings for different IoT environments, namely general/public IoT, household IoT, and fitness IoT, respectively. We developed and utilized a ``data-driven” approach in these three studies—We first use statistical analysis and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior and then create a set of ``smart” privacy defaults/profiles based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click or by answering a few related questions. The biggest limitation of these three studies is that the proposed interfaces have not been tested, so we do not know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus, in the last study, we address this limitation by conducting a user study to evaluate the new interfaces of recommending privacy settings for household IoT users. The results show that our proposed user interfaces for setting household IoT can improve users' satisfaction. Our research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
+In this dissertation, we first present three studies on recommending privacy settings for different IoT environments, namely general/public IoT, household IoT, and fitness IoT, respectively. We developed and utilized a ``data-driven” approach in these three studies—We first use statistical analysis and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior and then create a set of ``smart” privacy defaults/profiles based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click or by answering a few related questions. The biggest limitation of these three studies is that the proposed interfaces have not been tested, so we do not know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus, in the last study, we address this limitation by conducting a user study to evaluate the new interfaces of recommending privacy settings for household IoT users. The results show that our proposed user interfaces for setting household IoT privacy settings can improve users' satisfaction. Our research can benefit IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices by providing interfaces that put their most prominent concerns in the forefront and that make it easier to set settings that match their preferences.
 
