--- a/Dissertation/bibliography.bib
+++ b/Dissertation/bibliography.bib
@@ -1,3 +1,58 @@
+@article{metzger2004privacy,
+	title={Privacy, trust, and disclosure: Exploring barriers to electronic commerce},
+	author={Metzger, Miriam J},
+	journal={Journal of computer-mediated communication},
+	volume={9},
+	number={4},
+	pages={JCMC942},
+	year={2004},
+	publisher={Oxford University Press Oxford, UK}
+}
+
+@article{jarvenpaa1999consumer,
+	title={Consumer trust in an Internet store: A cross-cultural validation},
+	author={Jarvenpaa, Sirkka L and Tractinsky, Noam and Saarinen, Lauri},
+	journal={Journal of Computer-Mediated Communication},
+	volume={5},
+	number={2},
+	pages={JCMC526},
+	year={1999},
+	publisher={Oxford University Press Oxford, UK}
+}
+
+@article{xu2011personalization,
+	title={The personalization privacy paradox: An exploratory study of decision making process for location-aware marketing},
+	author={Xu, Heng and Luo, Xin Robert and Carroll, John M and Rosson, Mary Beth},
+	journal={Decision support systems},
+	volume={51},
+	number={1},
+	pages={42--52},
+	year={2011},
+	publisher={Elsevier}
+}
+
+@article{xu2009role,
+	title={The role of push-pull technology in privacy calculus: the case of location-based services},
+	author={Xu, Heng and Teo, Hock-Hai and Tan, Bernard CY and Agarwal, Ritu},
+	journal={Journal of management information systems},
+	volume={26},
+	number={3},
+	pages={135--174},
+	year={2009},
+	publisher={Taylor \& Francis}
+}
+
+@article{hui2006online,
+	title={Online information disclosure: Motivators and measurements},
+	author={Hui, Kai-Lung and Tan, Bernard CY and Goh, Chyan-Yee},
+	journal={ACM Transactions on Internet Technology (TOIT)},
+	volume={6},
+	number={4},
+	pages={415--441},
+	year={2006},
+	publisher={ACM}
+}
+
 @inproceedings{knijnenburg2013helping,
 	title={Helping users with information disclosure decisions: potential for adaptation},
 	author={Knijnenburg, Bart P and Kobsa, Alfred},
@@ -93,6 +148,36 @@
 	pages={391--394},
 	year={2012},
 	organization={ACM}
+}
+@article{davis1989perceived,
+	title={Perceived usefulness, perceived ease of use, and user acceptance of information technology},
+	author={Davis, Fred D},
+	journal={MIS quarterly},
+	pages={319--340},
+	year={1989},
+	publisher={JSTOR}
+}
+
+@article{xu2012research,
+	title={Research note—effects of individual self-protection, industry self-regulation, and government regulation on privacy concerns: a study of location-based services},
+	author={Xu, Heng and Teo, Hock-Hai and Tan, Bernard CY and Agarwal, Ritu},
+	journal={Information Systems Research},
+	volume={23},
+	number={4},
+	pages={1342--1363},
+	year={2012},
+	publisher={INFORMS}
+}
+
+@article{wang2007recommendation,
+	title={Recommendation agents for electronic commerce: Effects of explanation facilities on trusting beliefs},
+	author={Wang, Weiquan and Benbasat, Izak},
+	journal={Journal of Management Information Systems},
+	volume={23},
+	number={4},
+	pages={217--246},
+	year={2007},
+	publisher={Taylor \& Francis}
 }
 
 @article{malhotra2004internet,
