--- a/Dissertation/1introduction.tex
+++ b/Dissertation/1introduction.tex
@@ -1,4 +1,4 @@
-% !TeX root = disseration.tex
+% !TeX root = dissertation.tex
 \chapter{Introduction}\label{chapter:intro}
 During the last two decades, computers have evolved into all kinds of small footprint internet-connected devices that are capable of: 1) tracking us as we move about the built environment such as public spaces, offices, schools, universities; 2) being embedded in household appliances such as smart phones, TVs, refrigerators, light fixtures and thermostats to create `smart home' environments; 3) tracking our personal data daily as we wear them, such as smart watches, and fitness trackers. All these computers/devices have been integrated seamlessly into people's lives, which is defined as ``Internet of Things". By using all kinds of wireless sensor technologies (e.g. RFID, cameras, microphones, GPS, and accelerometers) and artificial intelligence, these internet-connected devices are able to gain knowledge of their surrounding and their users, exchange data with each other, monitor and control remotely controlled devices, and further interact with third-parties to provide us better personalized services, recommendations, and advertisements. They have been widely used in many fields, such as tracking, transportation, household usage, healthcare and fitness~\cite{li2011smart, solima2016object, kelly2013towards, jia2012rfid, hassanalieragh2015health}.
 
@@ -16,9 +16,7 @@ Prior research (chapter 2) has explored different approaches to this problem in 
 
 To solve these problems in the IoT domain, a more fundamental understanding of the logic behind IoT users' privacy decisions in different IoT contexts is needed. I therefore conducted a series of studies to contextualize the IoT users' decision making characteristics, and designed a set of privacy-setting interfaces to help them manage their privacy settings in various IoT contexts based on the deeper understanding of users' privacy decision behavior. 
 
-In this proposal, I first present the background and related work of this proposal in Chapter~\ref{chapter:Relatedwork1} and~\ref{chapter:Relatedwork2}. Then, I present three studies on recommending privacy settings for different IoT environments, namely general/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively. One should observe that the above three studies follow an decreasing order in terms of the IoT context scope. In the first study, I focused on the privacy decision on the entities collecting information from the users, while in the following two studies the context was moved to a more narrow environment (household IoT and fitness IoT), which shifts the focus to a more contextual evaluation of the content or nature of the information. This explains why in the first two studies, the dimensions used to analyze the context are the parameters of the corresponding IoT scenarios; and for the third study, the focus is on the fitness tracker permission questions. Note that the above three works all utilized a `` data-driven design" --- We first use statistical analysis (applicable to the first two works) and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then a set of ``smart" privacy defaults/profiles were created based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click (applicable to the first two works) or by answering a few related questions (applicable to the third work). The current biggest limitation for such ``data-driven" approach is that we did not test any of the presented interfaces, so we do not know what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable. Thus for my proposed work, I will address this limitation by discussing our proposed study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}. Finally, I conclude this proposal with expected contributions of my thesis in Chapter~\ref{chapter:conclusion}.
-
-%Chapter~\ref{chapter:Relatedwork} presents the background and related work of this proposal and we conclude our proposal in Chapter~\ref{chapter:conclusion}.
+In this dissertaion, I first present the background and related work of this dissertation in Chapter~\ref{chapter:Relatedwork1} and~\ref{chapter:Relatedwork2}. Then, I present three studies on recommending privacy settings for different IoT environments, namely general/public IoT in Chapter~\ref{chapter:generalIoT}, household IoT in Chapter~\ref{chapter:householdIoT}, and fitness IoT in Chapter \ref{chapter:fitnessIoT}, respectively. One should observe that the above three studies follow an decreasing order in terms of the IoT context scope. In the first study, I focused on the privacy decision regarding the entities collecting information from the users, while in the following two studies the context was moved to a more narrow environment (household IoT and fitness IoT), which shifts the focus to a more contextual evaluation of the content or nature of the information. This explains why in the first two studies, the dimensions used to analyze the context are the parameters of the corresponding IoT scenarios; and for the third study, the focus is on the fitness tracker permission questions. Note that the above three works all utilized a `` data-driven design" --- We first use statistical analysis (applicable to the first two works) and machine learning techniques on the collected user data to gain the underlying insights of IoT users' privacy decision behavior; and then a set of ``smart" privacy defaults/profiles were created based on these insights. Finally, we design a set of interfaces to incorporate these privacy default/profiles. Users can apply these smart defaults/profiles by either a single click (applicable to the first two works) or by answering a few related questions (applicable to the third work). To test the presented interfaces and uncover what level of complexity (both in terms of the user interface and the in terms of the profiles) is most suitable, I conducted a user study to evaluate the new interface of recommending privacy-settings for household IoT in Chapter~\ref{chapter:evaluation}. Finally, I conclude this dissertation with contributions and limitations in Chapter~\ref{chapter:conclusion}.
 
 %In Chapter~\ref{chapter:acceptability}, we first present a preliminary user study that we conduct by interviewing with potential IoT users to gain deeper understanding on the general IoT acceptability from users' perspective since the factors that affect users' adopting phase would more likely to have effect on their real use phase too. Therefore, knowing what aspects of IoT are important to user when they are considering adopting IoT would be helpful and supportive to our following investigation on how general IoT users make decisions when they share their personal data in different IoT contexts and further affect how we design the user interface for setting privacy preferences and recommend privacy settings for different IoT contexts.
 %For this study, we leveraged data collected by Lee and Kobsa~\cite{lee2016understanding}, which asked 200 participants about their intention to allow or reject the IoT features presented in 14 randomized generated general public IoT usage scenarios. The scenarios have 5 manipulable parameters: `Who', `What', `Where', `Reason', and `Persistence'. We first apply statistical analysis on the dataset to determine the effect of each scenario parameter on users' decisions to allow the general IoT scenarios. Based on this statistical analysis, we design an ``layered'' intelligent user interface to reduce the complexity of manually setting privacy preferences for IoT. To further simplify the task of manually setting privacy preferences, we next use machine learning techniques to predict users' decisions based on the scenario parameters. By using Weka Java library, I develop 5 different machine learning algorithms to cluster the participants and create a number of ``smart profiles''  accordingly. Each ``smart profile'' is a group of pre-set privacy setting preferences with detailed explanations. Users can simply choose the one they think the most fit and apply by a single click.In  and Chapter~\ref{chapter:fitnessIoT}, we present our existing work on recommending privacy settings in a more narrow environment---i.e. household IoT and fitness IoT.
