--- a/Dissertation/publication.tex
+++ b/Dissertation/publication.tex
@@ -6,7 +6,7 @@
 	
 	\item \textbf{He, Y.}, Bahirat, P., Knijnenburg, B.P. (2018): A Data Driven approach to Designing for Privacy in Household IoT. ACM Transactions on Interactive Intelligent Systems (TiiS).
 	
-	\item Sanchez, O., Torre, I.,\textbf{ He, Y.}, Knijnenburg, B.P. (2018) Recommending User Privacy Preferences for Fitness IoT. User Modeling and User-Adapted Interaction (UMUAI).
+	\item Sanchez, O., Torre, I.,\textbf{ He, Y.}, Knijnenburg, B.P. (2018) A Recommendation Approach for User Privacy Preferences in the Fitness Domain. User Modeling and User-Adapted Interaction (UMUAI).
 	
 	\item Bahirat, P., \textbf{He, Y.}, Knijnenburg, B.P. (2018): Exploring Defaults and Framing effects on Privacy Decision Making in Smarthomes. Interactive Workshop on the Human aspect of Smarthome Security and Privacy, SOUPS 2018, Baltimore, U.S.A.
 	\item Bahirat, P., \textbf{He, Y.}, Menon, A., Knijnenburg, B.P. (2018): A Data-Driven Approach to Developing IoT Privacy-Setting Interfaces. In 23th International Conference on Intelligent User Interfaces, 2018, Tokyo, Japan.
